--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'United States -- History -- Revolution, 1775-1783'
 - !lcc 'E151'
 - !lcsh 'United States -- History -- Colonial period, ca. 1600-1775'
+- GITenberg
 title: Beginnings of the American People
 url: http://www.gutenberg.org/ebooks/21501
